<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:collapseColumns="0,1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/novo_gasto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableTop="@drawable/novo_gasto"
                android:onClick="selecionarOpcao"
                android:text="@string/novo_gasto"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/nova_viagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableTop="@drawable/nova_viagem"
                android:onClick="selecionarOpcao"
                android:text="@string/nova_viagem"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/minhas_viagens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableTop="@drawable/minhas_viagens"
                android:onClick="selecionarOpcao"
                android:text="@string/minhas_viagens"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/configuracoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableTop="@drawable/configuracoes"
                android:onClick="selecionarOpcao"
                android:text="@string/configuracoes"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/anotacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableTop="@drawable/minhas_viagens"
                android:onClick="selecionarOpcao"
                android:text="@string/anotacoes"
                android:textColor="#FFFFFF"
                android:textStyle="bold"/>
        </LinearLayout>
    </TableLayout>

</LinearLayout>